--- a/ecomus-frontend-new-main/package.json
+++ b/ecomus-frontend-new-main/package.json
@@ -29,6 +29,7 @@
     "yup": "^1.3.1"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
