--- a/ecomusAdmin-main/package.json
+++ b/ecomusAdmin-main/package.json
@@ -44,6 +44,7 @@
     "yup": "^1.2.0"
   },
   "scripts": {
+    "dev": "set PORT=5000 && react-scripts start",
     "start": "set PORT=5000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
